stop sidebar button from shifting horizontally

--- a/frontend/src/components/Header/SidebarMenu.css
+++ b/frontend/src/components/Header/SidebarMenu.css
@@ -63,13 +63,13 @@
 
 /* Animate burger into "X" */
 .burger-line.open:nth-child(1) {
-  transform: rotate(45deg) translate(0, 11px);
+  transform: translate(0px, 5px) rotate(45deg);
 }
 .burger-line.open:nth-child(2) {
   opacity: 0;
 }
 .burger-line.open:nth-child(3) {
-  transform: rotate(-45deg) translate(0, -11px);
+  transform: translate(0px, -11px) rotate(-45deg);
 }
 
 /* Dark overlay */
